--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ edit_uri: 'blob/master/docs'
 nav:
   - Home: index.md
   - About: about.md
+  - Research: research.md
   - Lessons: 
       - Introduction: lessons/index.md
       - Test Sound: lessons/01-test-incoming-sound.md
@@ -20,7 +21,11 @@ nav:
       - Adding Timers: lessons/08-adding-timers.md
       - Assembler FFT: lessons/09-assembler-function.md
       - Future Work: lessons/10-future-improvements.md
-  - Research: research.md
+  - MicroSims: 
+    - Introduction: sims/index.md
+    - Signal Generator: sims/signal-generator/index.md
+  - Feedback: feedback.md
+  - License: license.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
   - References: references.md
