--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
     - Base and Treble: sims/base-and-treble.md
     - Tone Generator: sims/tone-generator/index.md
     - Waveform Types: sims/waveform-types/index.md
+    - FFT Butterfly: sims/fft-butterfly/index.md
   - Feedback: feedback.md
   - License: license.md
   - Glossary: glossary.md
