--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,12 +28,16 @@ nav:
       - Assembler FFT: lessons/09-assembler-function.md
       - Future Work: lessons/10-future-improvements.md
       - DSP Instructions: lessons/50-dsp-instructions.md
+      - FFT: lessons/30-fft.md
+      - FFT Butterfly: lessons/31-fft-butterfly.md
   - MicroSims: 
     - Introduction: sims/index.md
     - Base and Treble: sims/base-and-treble.md
     - Tone Generator: sims/tone-generator/index.md
     - Waveform Types: sims/waveform-types/index.md
     - FFT Butterfly: sims/fft-butterfly/index.md
+    - sims/base-and-treble/index.md
+    - sims/templates/index.md
   - Feedback: feedback.md
   - License: license.md
   - Glossary: glossary.md
