--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,12 +32,11 @@ nav:
       - FFT Butterfly: lessons/31-fft-butterfly.md
   - MicroSims: 
     - Introduction: sims/index.md
-    - Base and Treble: sims/base-and-treble.md
+    - Base and Treble: sims/base-and-treble/index.md
     - Tone Generator: sims/tone-generator/index.md
     - Waveform Types: sims/waveform-types/index.md
     - FFT Butterfly: sims/fft-butterfly/index.md
-    - sims/base-and-treble/index.md
-    - sims/templates/index.md
+    - Templates: sims/templates/index.md
   - Feedback: feedback.md
   - License: license.md
   - Glossary: glossary.md
