--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - Waveform Types: sims/waveform-types/index.md
     - FFT Butterfly: sims/fft-butterfly/index.md
     - Templates: sims/templates/index.md
+  - Project Ideas: project-ideas.md
   - Feedback: feedback.md
   - License: license.md
   - Glossary: glossary.md
